# embedding-text

./: .env  .env.template  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
checker/: bge_checker.py  demo.py  intent_api.py  intent_checker.py
embedding_model/: qwen3.py
knowledge/: __init__.py  add.py  add_kafka.py  data.md  query.py  search_merge.py  search_vector.py  test.py
main/: add.py  query.py  qwen3.py
model_api/: llm_api.py
nvidia-debs/: libnvidia-container-tools_1.17.8-1_amd64.deb  libnvidia-container1_1.17.8-1_amd64.deb  nvidia-container-toolkit-base_1.17.8-1_amd64.deb  nvidia-container-toolkit_1.17.8-1_amd64.deb
