[project]
name = "weaviate-python-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.11.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "redis>=6.2.0",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "weaviate-client~=3.21.0",
]
